--- a/ansible_project/roles/ec2_provision/tasks/main.yml
+++ b/ansible_project/roles/ec2_provision/tasks/main.yml
@@ -76,24 +76,14 @@
       with_items: "{{ ec2_instance.instances }}"
   tags: ['never', 'create_ec2']
 
-- name: Update EC2 instance
-  block:
-    - name: Amazon EC2 | Remove Old Key Pair
-      amazon.aws.ec2_key:
-        name: "{{ old_key_name }}"
-        state: absent
-        region: "{{ region }}"
-        aws_access_key: "{{ ec2_access_key }}"
-        aws_secret_key: "{{ ec2_secret_key }}"
-      notify: "cleanup key pairs"  # Trigger handler
 
     - name: Modify Security Group Rules
       amazon.aws.ec2_security_group:
         name: "{{ sec_group }}"
         rules: "{{ security_group_rules }}"
         state: present
-      notify: "revoke sec group rules"  # Trigger handler
-  tags: ['never', 'update_ec2']
+      notify: "restart network service"  # Trigger handler
+      tags: ['never', 'update_ec2']
 
 - name: Facts
   block: # This block prints out instance data
