--- a/ansible_project/roles/mysql_install/vars/main.yml
+++ b/ansible_project/roles/mysql_install/vars/main.yml
@@ -2,6 +2,7 @@
 # vars file for mysql_install
 mysql_rmp: "mysql80-community-release-el8-1.noarch.rpm"
 
+base_url: "https://download.fedoraproject.org/pub/epel/$releasever/Everything/$basearch/"
 rmp_gpg_key: "https://repo.mysql.com/RPM-GPG-KEY-mysql"
 mysql_key_buffer_size: "256M"
 mysql_max_allowed_packet: "64M"
